# generic-ostream-iterator

./: CMakeLists.txt  README.md  example.cpp
cmake/: Config.cmake.in
include/generic/: ostream_iterator.hpp
tests/: CMakeLists.txt  unit_tests.cpp
